TextureMtl.mm:108 (GetLayerMipIndex): \t! Unreachable reached https://bugs.webkit.org/show_bug.cgi?id=240790

Reviewed by Darin Adler

Check texture valid before use.

* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_resources.mm:
(rx::mtl::Texture::MakeTexture):

Canonical link: https://commits.webkit.org/251435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295429 268f45cc-cd09-0410-ab3c-d52691b4dbfc